--- a/twitter.conf
+++ b/twitter.conf
@@ -2,7 +2,7 @@
 # 片段文件将保存在 Quantumult X 目录下的 Profiles 子目录中。
 # 样例可参见 https://raw.githubusercontent.com/crossutility/Quantumult-X/master/sample-import-rewrite.snippet
 hostname = twitter.com
-^https:\\twitter.com\* url reject-200
+^https://twitter.com/* url reject-200
 ;script-response-body https://raw.githubusercontent.com/pashakhomchenko/TwitterAdBlocker/master/content.js
 
  
